Cleaned the repository

--- a/notebooks/MIOFlow/2-dim-reduction-latent-spaces.ipynb
+++ b/notebooks/MIOFlow/2-dim-reduction-latent-spaces.ipynb
@@ -270,7 +270,7 @@
     "\n",
     "- obs: 'time_label'\n",
     "- uns: 'pca'\n",
-    "- obsm: 'X_pca', 'X_phate', 'X_phate_visualization'\n",
+    "- obsm: 'X_pca', 'X_phate'\n",
     "- varm: 'PCs'\n"
    ]
   },
